# Po-Jian

./: .gitignore  package-lock.json  package.json  project.config.json  q.txt  知讯新闻流程.html
.auth/: auth.json  private.wx526b3bf8c3968626.key
.github/workflows/: news-fetch.yml
.pai/skill-update/: update.json
.trae/documents/: 知树小程序剩余工作计划.md  知树小程序开发方案.md
config/: index.ts
news-pipeline/: .env.example  README.md  pyproject.toml
news-pipeline/data/: news.json
news-pipeline/news_pipeline/: __init__.py  classifier.py  cleaner.py  config.py  fetcher.py  llm.py  main.py  output.py
scripts/: gen-svg-data.js
src/: app.config.ts  app.scss  app.tsx
src/components/ActionButton/: index.module.scss  index.tsx
src/components/CustomTabBar/: index.module.scss  index.tsx
src/components/DomainTabs/: index.module.scss  index.tsx
src/components/NewsCard/: index.module.scss  index.tsx
src/components/ResourceBar/: index.module.scss  index.tsx
src/components/SpeciesPicker/: index.module.scss  index.tsx
src/components/StatCard/: index.module.scss  index.tsx
src/components/TreeDisplay/: index.module.scss  index.tsx
src/data/: news-mock.ts  species.ts  svg-data.ts
src/hooks/: useNews.ts  useTree.ts
src/pages/cultivate/: index.config.ts  index.module.scss  index.tsx
src/pages/mine/: index.module.scss  index.tsx
src/pages/news-detail/: index.module.scss  index.tsx
src/services/: news.ts
src/store/: useGameStore.ts
src/styles/: theme.scss  variables.scss
src/types/: news.ts  tree.ts
src/utils/: constants.ts  date.ts  storage.ts
优化/: index.tsx
(+3 files in other folders)
