[project]
name = "zhishu-news-pipeline"
version = "0.1.0"
description = "知树小程序新闻数据管线：抓取、清洗、分组、LLM 中立改写、输出 JSON"
requires-python = ">=3.11.9"
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
]

[tool.uv]
# 使用系统已安装的 Python，不下载 uv 管理的解释器
python-preference = "only-system"
# 国内镜像源（清华），加速下载
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_pipeline"]
